fix contact form - mobile overflow - countdown offset

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   font-family: 'Quicksand', sans-serif;
 }
 
-body{
+#page-wrapper{
   overflow-x: hidden;
 }
 
